--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
+    "react-flip-move": "^3.0.3",
     "react-native-gesture-handler": "^1.3.0",
     "react-navigation": "^3.11.1",
     "react-router": "^5.0.1",
